Changes for 1.7.0

 - [DEV-403] added Debug mode for user groups in order to simplify GUI troubleshooting (Alexei)
 - [ZBX-773] fixed typo 'attribures' (Richlv)
 - [ZBX-974] recompressed most frontend images with pngcrush (Richlv)
 - [DEV-400] added necessary link between hosts and groups (Artem)
 - [ZBX-944] fixed changelog reference (Richlv)
 - [DEV-394] added easy access when not logged in (Artem)
 - [DEV-398] added hostgroup filter for HostGroup and TemplateLinkage twinboxes (Vedmak)
 - [DEV-377] added search for hosts and host-groups (Artem)
 - [DEV-388] Discovery: added new action operations - enable/disable host (Sasha)
 - [ZBX-949] fixed undefined constant S_add_TO (Richlv)
 - [DEV-137] operation interval steps N-N will be displayed as N (Alexei)
 - [DEV-318] Notifications: fixed messaging for discovery events (Sasha)
 - [DEV-391] Notifications: added new {DISCOVERY.*} macros (Sasha)
 - [DEV-390] Discovery: added support of port intervals (Sasha)
 - [DEV-317] added new action conditions (node, discovery rule/check, proxy) (Sasha)
 - [DEV-389] added SNMPv3 discovery check (Sasha)
 - [DEV-320] added macros for windows events logs in notifications (Sasha)
 - [DEV-332] added media selection for notifications (Sasha,Artem)
 - [DEV-385] added Event ID field for eventlogs (Sasha)
 - [DEV-382] added support of IPv6 for monitoring of the SNMP devices (Sasha)
 - [DEV-328] implemented printing of stopped Zabbix process PID for better debugging (Alexei)
 - [DEV-137] now SNMP keys with dynamic indexes use only one connection (Sasha)
 - [ZBX-921] fixed processing of SNMP strings (Sasha)
 - [DEV-341] rework of events history, as consequences changes in audit screen, some reports and other pages (Artem)
 - [DEV-356] moved dropdown configuration from defines to frontend (Vedmak)
 - [DEV-355] changed node management interface (Vedmak)
 - [DEV-341] added hint with previous 20 events in Dashboard's widget "Last 20 issues" on mouse-over (Vedmak)